--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://popcash.net/world/go/489377/738925/" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>Redirecting to PopCash...</p>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Exclusive Download Awaits!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="5;url=https://singingfiles.com/show.php?l=0&u=2395961&id=67722">
+  <style>
+    body {
+      background: linear-gradient(to right, #141e30, #243b55);
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 100px 20px;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+    .btn {
+      background: #00c6ff;
+      background: linear-gradient(to right, #0072ff, #00c6ff);
+      color: white;
+      padding: 15px 30px;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+    .btn:hover {
+      background: #00b4ff;
+    }
+  </style>
+</head>
+<body>
+  <h1>Your File is Almost Ready!</h1>
+  <p>Please wait while we prepare your secure download link...</p>
+  <a class="btn" href="https://singingfiles.com/show.php?l=0&u=2395961&id=67722">Click here if you are not redirected</a>
+</body>
 </html>
+
