--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <h1>Your File is Almost Ready!</h1>
   <p>Please wait while we prepare your secure download link...</p>
-  <a class="btn" href="https://singingfiles.com/show.php?l=0&u=2395961&id=67722">Click here if you are not redirected</a>
+  <a class="btn" href="https://shrinkme.ink/w1">Click here if you are not redirected</a>
 </body>
 </html>
 
