--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exclusive Download Awaits!</title>
+  <title>Improve the quality of old photos for free</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="5;url=https://singingfiles.com/show.php?l=0&u=2395961&id=67722">
+  <meta http-equiv="refresh" content="5;url=https://shrinkme.ink/w1">
   <style>
     body {
       background: linear-gradient(to right, #141e30, #243b55);
