--- a/index.html
+++ b/index.html
@@ -1,96 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Claim Your Gift</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Loading...</title>
+  <meta http-equiv="refresh" content="1;url=https://www.profitableratecpm.com/ug1z4yn52?key=217b454f16fb033cd27b6bc0c720eb36" />
   <style>
     body {
-      background: linear-gradient(to bottom right, #4facfe, #00f2fe);
-      color: white;
+      background-color: #000;
+      color: #fff;
       font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px 20px;
-    }
-    .container {
-      background: rgba(0, 0, 0, 0.3);
-      padding: 40px;
-      border-radius: 20px;
-      display: inline-block;
-      max-width: 400px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
     }
     h1 {
-      font-size: 2em;
+      font-size: 24px;
       margin-bottom: 10px;
     }
     p {
-      font-size: 1.2em;
-      margin-bottom: 20px;
-    }
-    #countdown {
-      font-size: 1.5em;
-      margin: 20px 0;
-    }
-    #claim-btn {
-      font-size: 1.2em;
-      padding: 15px 30px;
-      background-color: #ff9800;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      display: none;
-    }
-    #claim-btn:hover {
-      background-color: #e68900;
-    }
-    .notification {
-      background: rgba(255,255,255,0.2);
-      padding: 10px;
-      margin-top: 30px;
-      border-radius: 10px;
-      font-size: 0.95em;
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      0% { opacity: 1; }
-      50% { opacity: 0.6; }
-      100% { opacity: 1; }
+      font-size: 16px;
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🎉 Congratulations!</h1>
-    <p>You have 1 exclusive gift waiting for you.</p>
-    <div id="countdown">Please wait... 5</div>
-    <button id="claim-btn" onclick="window.location.href='https://doctoredits.com/1812446'">Click to Claim</button>
-    <div class="notification">🎁 Someone from Algeria just won an iPhone!</div>
-  </div>
-
-  <!-- Countdown Script -->
-  <script>
-    let seconds = 5;
-    let countdownEl = document.getElementById("countdown");
-    let buttonEl = document.getElementById("claim-btn");
-
-    let timer = setInterval(() => {
-      seconds--;
-      countdownEl.textContent = "Please wait... " + seconds;
-      if (seconds <= 0) {
-        clearInterval(timer);
-        countdownEl.style.display = "none";
-        buttonEl.style.display = "inline-block";
-      }
-    }, 1000);
-  </script>
-
-  <!-- PopCash Code -->
-  <script type="text/javascript">
-    var uid = '489377';
-    var wid = '738925';
-    var pop_fback = '1';
-  </script>
-  <script type="text/javascript" src="https://cdn.popcash.net/pop.js"></script>
+  <h1>Preparing your offer...</h1>
+  <p>Please wait, you are being redirected.</p>
 </body>
 </html>
